--- a/Haskell-Holdem.cabal
+++ b/Haskell-Holdem.cabal
@@ -62,6 +62,7 @@ library
     exposed-modules:  
         HaskellHoldem,
         Deck,
+        Rules
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -116,7 +117,8 @@ test-suite Testem
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        DeckSpec
+        DeckSpec,
+        RulesSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -138,4 +140,4 @@ test-suite Testem
         QuickCheck,
         containers,
         random,
-        mtl
+        mtl,
