--- a/Haskell-Holdem.cabal
+++ b/Haskell-Holdem.cabal
@@ -62,7 +62,8 @@ library
     exposed-modules:  
         HaskellHoldem,
         Deck,
-        Rules
+        Rules,
+        CardParser
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -118,7 +119,8 @@ test-suite Testem
     -- Modules included in this executable, other than Main.
     other-modules:
         DeckSpec,
-        RulesSpec
+        RulesSpec,
+        CardParserSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
